# Gerencia.Back

./: .env.exemplo  .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt
config/: settings.py  urls.py
fabrica/: admin.py
fabrica/migrations/: 0001_initial.py  0002_initial.py  0002_projeto.py  0003_membrosprojeto.py  0003_projeto_capa.py  0004_projeto_membros.py  0005_usuariostipo_delete_membrosprojeto.py  0006_post_rename_texto_projeto_descricao_and_more.py  0007_rename_usuario_comentario_usuario_id_and_more.py  0008_projeto_grupo_id.py
fabrica/models/: __init__.py  comentario.py  post.py  projeto.py  tarefa.py  tarefas.py  tipos_usuarios.py
fabrica/serializers/: __init__.py  comentario.py  post.py  projeto.py  tarefa.py  tipos_usuarios.py
fabrica/views/: __init__.py  comentario.py  post.py  projeto.py  tarefa.py  tipos_usuarios.py
uploader/migrations/: 0001_initial.py
usuario/: admin.py  models.py  serializers.py  views.py
usuario/migrations/: 0001_initial.py  0002_usuario_foto.py  0002_usuario_tipo_usuario.py  0003_remove_usuario_foto_usuario_foto.py  0003_remove_usuario_tipo_usuario_delete_tipousuario.py  0004_remove_usuario_foto.py  0005_usuario_foto.py
